--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
   build:
@@ -28,4 +28,3 @@ jobs:
         cache: maven
     - name: Run tests
       run: mvn clean install -Dci_cd=true
-
